RESOLVED FIXED310381
Media controls don't disappear after hitting play/pause on embedded youtube
https://bugs.webkit.org/show_bug.cgi?id=310381
Summary Media controls don't disappear after hitting play/pause on embedded youtube
phinehas133
Reported 2026-03-20 12:56:31 PDT
see title
Attachments
phinehas133
Comment 1 2026-03-20 12:56:33 PDT
phinehas133
Comment 2 2026-03-20 13:00:05 PDT
EWS
Comment 3 2026-04-01 22:05:16 PDT
Committed 310419@main (7089525bc66b): <https://commits.webkit.org/310419@main> Reviewed commits have been landed. Closing PR #61027 and removing active labels.
phinehas133
Comment 4 2026-04-21 17:27:20 PDT
phinehas133
Comment 5 2026-04-21 17:27:41 PDT
EWS
Comment 6 2026-04-21 17:48:13 PDT
Committed 311731@main (9e811461e652): <https://commits.webkit.org/311731@main> Reviewed commits have been landed. Closing PR #63284 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.